--- a/sqlx-sqlite/Cargo.toml
+++ b/sqlx-sqlite/Cargo.toml
@@ -45,6 +45,9 @@ tracing = { version = "0.1.37", features = ["log"] }
 serde = { version = "1.0.145", features = ["derive"], optional = true }
 regex = { version = "1.5.5", optional = true }
 
+tempfile = { workspace = true }
+once_cell = { workspace = true }
+
 [dependencies.libsqlite3-sys]
 version = "0.30.1"
 default-features = false
